--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-free": "^5.7.1",
+    "@fortawesome/fontawesome-free": "^5.7.2",
     "axios": "^0.18",
     "bootstrap": "^4.0.0",
     "cross-env": "^5.1",
@@ -25,6 +25,9 @@
     "vue-template-compiler": "^2.6.6"
   },
   "dependencies": {
-    "admin-lte": "^3.0.0-alpha.2"
+    "admin-lte": "^3.0.0-alpha.2",
+    "axios": "^0.18.0",
+    "vform": "^1.0.0",
+    "vue-router": "^3.0.2"
   }
 }
