--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
   "dependencies": {
     "admin-lte": "^3.0.0-alpha.2",
     "axios": "^0.18.0",
+    "moment": "^2.24.0",
+    "sweetalert2": "^8.2.4",
     "vform": "^1.0.0",
+    "vue-progressbar": "^0.7.5",
     "vue-router": "^3.0.2"
   }
 }
